# crossbar9

./: .gitignore  .gitmodules  .travis.yml  AppInfo  Cargo.toml  D9WIP-fs-compile.patch  README.md  Xargo.toml  build.rs  build.sh  layout.ld  thumbv5te-none-eabi.json
.cargo/: config
debug.ctr9/: desc.json
src/: caches.rs  caches.s  fat.rs  ffistr.rs  input.rs  interrupts.rs  interrupts.s  intrinsics.rs  main.rs  mem.rs  power.rs  realtime.rs  start.s  test.rs  unique.rs
src/gfx/: font.data  mod.rs  screen.rs  text.rs  ui.rs
src/io/: aes.rs  codec.c  hid.rs  i2c.rs  irq.rs  mic.rs  mod.rs  ndma.rs  rsa.rs  sdmmc.rs  sha.rs  spi.c  spi.rs  spi_tsc.rs  timer.rs  xdma.rs
src/programs/: aes.rs  armwrestler.rs  armwrestler.s  buttons.rs  cache_benchers.s  hello_world.rs  mod.rs  ndma.rs  rsa.rs  sha_hasher.rs  sleep_timer.rs  thumbwrestler.rs  thumbwrestler.s  ui.rs  wrestler_common.rs  xdma.rs
src/programs/os/: entry.s  loader.rs  mod.rs  processes.rs
src/tests/: aes.rs  armwrestler.rs  armwrestler.s  caches.rs  hello_world.rs  mod.rs  ndma.rs  rsa.rs  sha_hasher.rs  sleep_timer.rs  spi.rs
