[package]
name = "crossbar9"
version = "0.1.0"
authors = ["archshift <gh@archshift.com>"]
build = "build.rs"

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
rlibc = "1.0"

[dependencies.bitutils]
git = "https://github.com/archshift/bitutils-rs"
default-features = false

[build-dependencies]
gcc = "0.3.25"

[features]
hello_world = []
sleep = []
armwrestler = []