[package]
name = "crossbar9"
version = "0.1.0"
authors = ["archshift <gh@archshift.com>"]
build = "build.rs"

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
opt-level = 2
overflow-checks = false 

[dependencies]
rlibc = "1.0"
xmas-elf = "0.6"
u2N = { git = "https://github.com/archshift/u2N" }

[dependencies.bitutils]
version = "2.0"
default-features = false

[build-dependencies]
cc = "1.0"
